--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,11 @@
   }
 }
 
+/* .bg-pattern {
+  background-image: url('../../public/bg-pattern.png');
+  background-repeat: repeat;
+} */
+
 body {
   color: var(--foreground);
   background: var(--background);
